Actions
Bug #8125
closedkmem_move tunables must not be declared static
Start date:
2017-04-28
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
External Bug:
Description
The kmem_move_* tunables (e.g. kmem_move_noreap) are declared "static".
Because they are never set in the code, the compiler can consider them
constants and optimize them away - removing the code that checks them.
They must not be declared "static" to be used as tunables.
Updated by Electric Monk almost 6 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 929d5b43a5225be8ab64d840e6a10803fb6acd0b
commit 929d5b43a5225be8ab64d840e6a10803fb6acd0b Author: Matthew Ahrens <mahrens@delphix.com> Date: 2017-05-16T22:41:15.000Z 8125 kmem_move tunables must not be declared static Reviewed by: Serapheim Dimitropoulos <serapheim@delphix.com> Reviewed by: Dan Kimmel <dan.kimmel@delphix.com> Reviewed by: Prashanth Sreenivasa <pks@delphix.com> Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Robert Mustacchi <rm@joyent.com>
Actions